--- a/.github/workflows/dependency-test.yml
+++ b/.github/workflows/dependency-test.yml
@@ -18,7 +18,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - name: Setup Git User
-        uses: fregante/setup-git-user@v2
+        uses: fregante/setup-git-user@024bc0b8e177d7e77203b48dab6fb45666854b35
 
       - name: Merge main into PR
         id: merge_main
