--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
           ref: ${{ github.head_ref }}
+          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
@@ -53,6 +54,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
+          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
@@ -71,6 +73,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
