--- a/.github/workflows/bump-dependency.yaml
+++ b/.github/workflows/bump-dependency.yaml
@@ -97,7 +97,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
-
       - name: Set up Go 1.x
         uses: actions/setup-go@v5
         with:
@@ -146,7 +145,7 @@ jobs:
           git push origin "${BRANCH}"
 
       - name: pull-request
-        uses: repo-sync/pull-request@v2
+        uses: repo-sync/pull-request@7e79a9f5dc3ad0ce53138f01df2fad14a04831c5
         id: latest-pr
         with:
           source_branch: ${{ needs.sanitize-payload.outputs.safe_branch }}
