--- a/.github/workflows/dependency-test.yml
+++ b/.github/workflows/dependency-test.yml
@@ -16,10 +16,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
-          persist-credentials: false
 
       - name: Setup Git User
-        uses: fregante/setup-git-user@024bc0b8e177d7e77203b48dab6fb45666854b35
+        uses: fregante/setup-git-user@v2
 
       - name: Merge main into PR
         id: merge_main
