--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -18,7 +18,6 @@ jobs:
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN || secrets.GITHUB_TOKEN }}
           ref: ${{ github.head_ref }}
-          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
@@ -40,7 +39,7 @@ jobs:
           if [ ! -z "$changes" ]; then
              echo "has-changes=true" >> $GITHUB_OUTPUT
           fi
-      - uses: EndBug/add-and-commit@61a88be553afe4206585b31aa72387c64295d08b
+      - uses: EndBug/add-and-commit@v9.1.1
         if: ${{ steps.detect-changes.outputs.has-changes == 'true' }}
         with:
           message: "[ga-format-pr] Run ./format_repo.sh to fix formatting"
@@ -54,7 +53,6 @@ jobs:
       - uses: actions/checkout@v4
         with:
           ref: ${{ github.head_ref }}
-          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
@@ -73,8 +71,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
-        with:
-          persist-credentials: false
       - name: Setup Go 1.x
         uses: actions/setup-go@v5
         with:
