Squashed commit of the following:
commit 0e9ffdff9b27368a64581e96ffb54d4d30804b1f
Merge: d977e491d f0d63aa2d
Author: Fabrizio <135109076+fabrizio-grafana@users.noreply.github.com>
Date:   Tue Feb 24 15:23:25 2026 +0100

    Merge pull request #2 from grafana/add-option-to-disable-writes

    Add option to disable file writes

commit f0d63aa2dbf5f4f6804ebcd1d61e06b98d6cc7f3
Author: Fabrizio <fabrizio.casati@grafana.com>
Date:   Tue Feb 24 15:11:07 2026 +0100

    Fix remaining Zizmor errors manually

commit 736646bfd3ff4e27cefd38aa7d0d9b8527d72245
Author: Fabrizio <fabrizio.casati@grafana.com>
Date:   Tue Feb 24 15:07:33 2026 +0100

    Run `zizmor --fix=all`

commit b0b6e7fd241d981092e617af343da53d1f8f8ddf
Author: Fabrizio <fabrizio.casati@grafana.com>
Date:   Tue Feb 24 15:03:42 2026 +0100

    Pin CI dependencies

commit b9bc527b7c6a19545e89b53515e9a527245fd151
Author: Fabrizio <fabrizio.casati@grafana.com>
Date:   Tue Feb 24 12:42:54 2026 +0100

    Add option to disable file writes

--- a/.github/workflows/bump-dependency.yaml
+++ b/.github/workflows/bump-dependency.yaml
@@ -146,7 +146,7 @@ jobs:
           git push origin "${BRANCH}"
 
       - name: pull-request
-        uses: repo-sync/pull-request@7e79a9f5dc3ad0ce53138f01df2fad14a04831c5
+        uses: repo-sync/pull-request@v2
         id: latest-pr
         with:
           source_branch: ${{ needs.sanitize-payload.outputs.safe_branch }}
